# amqpClientcpp

./: .gitignore  README.md
src/: CMakeLists.txt  receive.cpp  send.cpp
